# 05_workshop_pydantic

./: README.md  mkdocs.yml  pyproject.toml
app/: etl.py  funcao.py
docs/: index.md
tests/: test_func_etl.py  test_ola_turma.py
