[tool.poetry]
name = "5-workshop"
version = "0.1.0"
description = ""
authors = ["Samuel Lima <osamuellimaesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-material = "^9.5.44"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
taskipy = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"